export const snapshot = {};

snapshot[`Issue Create Command - Help Text 1`] = `
stdout:
\`
Usage: create

Description:

  Create a linear issue

Options:

  -h, --help                                - Show this help.                                                         
  --start                                   - Start the issue after creation                                          
  -a, --assignee             <assignee>     - Assign the issue to 'self' or someone (by username or name)             
  --due-date                 <dueDate>      - Due date of the issue                                                   
  --parent                   <parent>       - Parent issue (if any) as a team_number code                             
  -p, --priority             <priority>     - Priority of the issue (1-4, descending priority)                        
  --estimate                 <estimate>     - Points estimate of the issue                                            
  -d, --description          <description>  - Description of the issue (prefer --description-file for markdown)       
  --description-file         <path>         - Read description from a file (preferred for markdown content)           
  -l, --label                <label>        - Issue label associated with the issue. May be repeated.                 
  --team                     <team>         - Team associated with the issue (if not your default team)               
  --project                  <project>      - Name or slug ID of the project with the issue                           
  -s, --state                <state>        - Workflow state for the issue (by name or type)                          
  --milestone                <milestone>    - Name of the project milestone                                           
  --cycle                    <cycle>        - Cycle name, number, or 'active'                                         
  -j, --json                                - Force machine-readable JSON output                                      
  --text                                    - Output human-readable text                                              
  --dry-run                                 - Preview the created issue without creating it                           
  --timeout-ms               <timeoutMs>    - Timeout for write confirmation in milliseconds                          
  --no-pager                                - Accepted for compatibility; issue create does not use a pager           
  --no-use-default-template                 - Do not use default template for the issue                               
  -i, --interactive                         - Enable interactive prompts and editor flow                              
  --no-interactive                          - Accepted for compatibility; issue create is non-interactive by default  
  -t, --title                <title>        - Title of the issue                                                      

Examples:

  Create an issue as JSON                    linear issue create --title "Fix auth expiry bug" --team ENG                          
  Create an issue with a piped description   cat description.md | linear issue create --title "Fix auth expiry bug" --team ENG     
  Create an issue with human-readable output linear issue create --title "Fix auth expiry bug" --team ENG --text                   
  Preview issue creation                     linear issue create --title "Fix auth expiry bug" --team ENG --state started --dry-run

\`
stderr:
""
`;

snapshot[`Issue Create Command - Happy Path 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-123/fix-authentication-bug
"
stderr:
""
`;

snapshot[`Issue Create Command - JSON Output 1`] = `
stdout:
'{
  "id": "issue-new-json",
  "identifier": "ENG-321",
  "title": "Bot-created issue",
  "url": "https://linear.app/test-team/issue/ENG-321/bot-created-issue",
  "dueDate": "2026-03-31",
  "assignee": {
    "id": "user-self-123",
    "name": "alice.bot",
    "displayName": "Alice Bot",
    "initials": "AB"
  },
  "parent": {
    "id": "parent-issue-id",
    "identifier": "ENG-220",
    "title": "Parent Issue",
    "url": "https://linear.app/test-team/issue/ENG-220/parent-issue",
    "dueDate": null,
    "state": {
      "name": "Backlog",
      "color": "#bec2c8"
    }
  },
  "state": {
    "name": "In Progress",
    "color": "#f87462"
  },
  "receipt": {
    "operationId": "issue.create",
    "resource": "issue",
    "action": "create",
    "resolvedRefs": {
      "issueIdentifier": "ENG-321",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-220",
      "state": "In Progress"
    },
    "appliedChanges": [
      "title",
      "description",
      "assignee",
      "dueDate",
      "parent",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "apply",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Created issue ENG-321",
    "refs": {
      "issueIdentifier": "ENG-321",
      "teamKey": "ENG",
      "assignee": "alice.bot",
      "parentIssueIdentifier": "ENG-220",
      "state": "In Progress"
    },
    "changes": [
      "title",
      "description",
      "assignee",
      "dueDate",
      "parent",
      "state"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "read_before_retry"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Dry Run 1`] = `
stdout:
'{
  "success": true,
  "dryRun": true,
  "summary": "Would create issue in ENG",
  "data": {
    "command": "issue.create",
    "start": false,
    "team": {
      "id": "team-eng-id",
      "key": "ENG"
    },
    "project": {
      "id": null,
      "nameOrSlug": null
    },
    "input": {
      "title": "Bot-created issue",
      "description": "Created from automation",
      "assigneeId": "user-self-123",
      "dueDate": "2026-03-31",
      "parent": {
        "id": "parent-issue-id",
        "identifier": "ENG-220",
        "title": "Parent Issue"
      },
      "priority": null,
      "estimate": null,
      "labelIds": [],
      "teamId": "team-eng-id",
      "projectId": null,
      "projectMilestoneId": null,
      "cycleId": null,
      "stateId": "state-started",
      "useDefaultTemplate": true
    }
  },
  "operation": {
    "family": "write_operation",
    "version": "v1",
    "phase": "preview",
    "command": "issue.create",
    "resource": "issue",
    "action": "create",
    "summary": "Would create issue in ENG",
    "refs": {
      "teamKey": "ENG",
      "project": null,
      "parentIssueIdentifier": "ENG-220"
    },
    "changes": [
      "title",
      "description",
      "assigneeId",
      "dueDate",
      "parent",
      "priority",
      "estimate",
      "labelIds",
      "teamId",
      "projectId",
      "projectMilestoneId",
      "cycleId",
      "stateId",
      "useDefaultTemplate"
    ],
    "noOp": false,
    "partialSuccess": false,
    "nextSafeAction": "apply"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - JSON Validation Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Cannot use machine-readable output with --start",
    "suggestion": "Use --dry-run for machine-readable previews, or pass --text --start when you want to start work immediately.",
    "context": "Failed to create issue"
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - Description Parse Guidance 1`] = `
stdout:
""
stderr:
\`✗ Failed to create issue: Missing value for option "--description".
  If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.
\`
`;

snapshot[`Issue Create Command - JSON Description Parse Guidance 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "validation_error",
    "message": "Missing value for option \\\\"--description\\\\".",
    "suggestion": "If you're passing long Markdown, prefer --description-file <path> or pipe content on stdin.",
    "context": "Failed to create issue"
  }
}
\`
stderr:
""
`;

snapshot[`Issue Create Command - JSON Plan Limit Failure 1`] = `
stdout:
\`{
  "success": false,
  "error": {
    "type": "graphql_error",
    "message": "You've reached the issue limit for the free plan. Upgrade or archive issues to continue.",
    "suggestion": "Upgrade your Linear plan or archive existing items and retry.",
    "context": "Failed to create issue"
  }
}
\`
stderr:
""
`;

snapshot[`Issue Create Command - JSON Rate Limit Failure 1`] = `
stdout:
'{
  "success": false,
  "error": {
    "type": "graphql_error",
    "message": "GraphQL Error (Code: 429): {\\\\"response\\\\":{\\\\"status\\\\":429,\\\\"headers\\\\":{}},\\\\"request\\\\":{\\\\"query\\\\":\\\\"mutation CreateIssue(\$input: IssueCreateInput!) {\\\\\\\\n  issueCreate(input: \$input) {\\\\\\\\n    success\\\\\\\\n    issue {\\\\\\\\n      id\\\\\\\\n      identifier\\\\\\\\n      title\\\\\\\\n      url\\\\\\\\n      dueDate\\\\\\\\n      assignee {\\\\\\\\n        id\\\\\\\\n        name\\\\\\\\n        displayName\\\\\\\\n        initials\\\\\\\\n      }\\\\\\\\n      parent {\\\\\\\\n        id\\\\\\\\n        identifier\\\\\\\\n        title\\\\\\\\n        url\\\\\\\\n        dueDate\\\\\\\\n        state {\\\\\\\\n          name\\\\\\\\n          color\\\\\\\\n        }\\\\\\\\n      }\\\\\\\\n      state {\\\\\\\\n        name\\\\\\\\n        color\\\\\\\\n      }\\\\\\\\n      team {\\\\\\\\n        key\\\\\\\\n      }\\\\\\\\n    }\\\\\\\\n  }\\\\\\\\n}\\\\",\\\\"variables\\\\":{\\\\"input\\\\":{\\\\"title\\\\":\\\\"Blocked by rate limit\\\\",\\\\"labelIds\\\\":[],\\\\"teamId\\\\":\\\\"team-eng-id\\\\",\\\\"useDefaultTemplate\\\\":true}}}}",
    "suggestion": "Retry after 60 seconds before creating more issues.",
    "context": "Failed to create issue",
    "details": {
      "rateLimit": {
        "retryAfter": "60",
        "limit": "5",
        "remaining": "0",
        "reset": "1711260000"
      }
    }
  }
}
'
stderr:
""
`;

snapshot[`Issue Create Command - Rate Limit Failure 1`] = `
stdout:
"Creating issue in ENG

"
stderr:
'✗ Failed to create issue: GraphQL Error (Code: 429): {"response":{"status":429,"headers":{}},"request":{"query":"mutation CreateIssue(\$input: IssueCreateInput!) {\\\\n  issueCreate(input: \$input) {\\\\n    success\\\\n    issue {\\\\n      id\\\\n      identifier\\\\n      title\\\\n      url\\\\n      dueDate\\\\n      assignee {\\\\n        id\\\\n        name\\\\n        displayName\\\\n        initials\\\\n      }\\\\n      parent {\\\\n        id\\\\n        identifier\\\\n        title\\\\n        url\\\\n        dueDate\\\\n        state {\\\\n          name\\\\n          color\\\\n        }\\\\n      }\\\\n      state {\\\\n        name\\\\n        color\\\\n      }\\\\n      team {\\\\n        key\\\\n      }\\\\n    }\\\\n  }\\\\n}","variables":{"input":{"title":"Blocked by rate limit","labelIds":[],"teamId":"team-eng-id","useDefaultTemplate":true}}}}
  Retry after 60 seconds before creating more issues.
'
`;

snapshot[`Issue Create Command - With Milestone 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-789/test-milestone-feature
"
stderr:
""
`;

snapshot[`Issue Create Command - Case Insensitive Label Matching 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-456/test-case-insensitive-labels
"
stderr:
""
`;

snapshot[`Issue Create Command - Short Flag -p Is Priority 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-999/test-priority-flag
"
stderr:
""
`;

snapshot[`Issue Create Command - With Cycle 1`] = `
stdout:
"Creating issue in ENG

https://linear.app/test-team/issue/ENG-890/test-cycle-feature
"
stderr:
""
`;
